# OtakuSearch

./: .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  tailwind.config.js
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_delete_customuser.py
core/: utils.py
features/: comment.feature  environment.py  login_signup.feature  test.feature
features/steps/: authentication.py  comment.py
project/: settings.py  urls.py
static/css/: anime-manga.css  landing.css  login-signup.css  profile.css  responsiveInfo.css  responsiveTest.css  styles.css  tailwind.css
static/js/: utils.js
templates/: anime.html  base.html  detailedInfo.html  esquelet.html  header.html  home.html  members.html  profile.html  skeleton.html
templates/registration/: account.html  login.html  signup.html
web/: admin.py  forms.py  models.py  views.py
web/management/commands/: populate.py
web/migrations/: 0001_initial.py  0002_anime_genres_anime_studios.py
