[tool.poetry]
name = "OtakuSearch"
version = "0.1.0"
description = ""
authors = ["David Sarrat González <113605621+davidsarratgonzalez@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
pre-commit = "^3.6.2"
django-browser-reload = "^1.12.1"
django-tailwind-cli = "^2.10.0"
requests = "^2.31.0"
django-behave = "^0.1.6"
behave = "^1.2.6"
splinter = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
